# yolov7_ros

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
yolov7_ros/: CMakeLists.txt  package.xml  setup.py
yolov7_ros/launch/: detect.launch
yolov7_ros/nodes/: detect.py
yolov7_ros/src/yolov7_ros/: utils.py  visualization.py  wrapper.py
yolov7_ros/weights/: .gitignore  README.md
